--- a/src/components/contact/contact-map.scss
+++ b/src/components/contact/contact-map.scss
@@ -7,7 +7,9 @@
 		margin: auto;
 
 		width: 80vw;
+		max-width: calc(1920px * 0.8);
 		height: 80vh;
+		max-height: calc(1080px * 0.8);
 		border: none;
 	}
 
